- Create User-Entity, -Repository and -Service - Create AuthController for Login and Logout and make it accessible without authorization